deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: first-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  
  rules:
  - http:
      paths:
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 3000
      - path: /nn
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
